--- a/Views/Home/Feature.cshtml
+++ b/Views/Home/Feature.cshtml
@@ -1,28 +1,28 @@
 @using Microsoft.AspNetCore.Hosting;
 @{
-    ViewData["Title"] = "Feature";
+	ViewData["Title"] = "Feature";
 }
 @*
-<!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-@DateTime.Now.Date
-@Environment.CurrentDirectory.ToString()
+	<!DOCTYPE html>
+	<html>
+	<head>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	</head>
+	<body>
+	@DateTime.Now.Date
+	@Environment.CurrentDirectory.ToString()
 
-@*
-<i class="fa fa-lock" style="font-size:20px;color:blue;"></i>
-<i class="fa fa-lock-open" style="font-size:20px;color:blue;"></i>
-<i class="fa-solid fa-lock-open"></i>
-<i class="fa-sharp fa-solid fa-lock-open"></i>
-<i class="fa fa-check-square-o" style="font-size:24px"></i>
-<i style="font-size:24px" class="fa">&#xf096;</i>
-<i class="fa fa-square-o" style="font-size:24px"></i>
+	@*
+	<i class="fa fa-lock" style="font-size:20px;color:blue;"></i>
+	<i class="fa fa-lock-open" style="font-size:20px;color:blue;"></i>
+	<i class="fa-solid fa-lock-open"></i>
+	<i class="fa-sharp fa-solid fa-lock-open"></i>
+	<i class="fa fa-check-square-o" style="font-size:24px"></i>
+	<i style="font-size:24px" class="fa">&#xf096;</i>
+	<i class="fa fa-square-o" style="font-size:24px"></i>
 
-</body>
-</html>*@
+	</body>
+	</html>*@
 
 <!DOCTYPE html>
 <html>
@@ -30,38 +30,38 @@
 <head>
 	<title>Getting Clients IP</title>
 	<style>
-	p, h1 {
-		color: green;
-	}
+		p,
+		h1 {
+			color: green;
+		}
 	</style>
 
-	<script src=
-"https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
 	</script>
-	
+
 	<script>
-	
-	/* Add "https://api.ipify.org?format=json" statement
-			this will communicate with the ipify servers in
-			order to retrieve the IP address $.getJSON will
-			load JSON-encoded data from the server using a
-			GET HTTP request */
-				
-	$.getJSON("https://api.ipify.org?format=json", function(data) {
-		
-		// Setting text of element P with id gfg
-		$("#gfg").html(data.ip);
-	})
+
+		/* Add "https://api.ipify.org?format=json" statement
+				this will communicate with the ipify servers in
+				order to retrieve the IP address $.getJSON will
+				load JSON-encoded data from the server using a
+				GET HTTP request */
+
+		$.getJSON("https://api.ipify.org?format=json", function (data) {
+
+			// Setting text of element P with id gfg
+			$("#gfg").html(data.ip);
+		})
 	</script>
 </head>
 
 <body>
 	<center>
 		@*<h3>Public IP Address of user is:</h3>
-		<p id="gfg"></p>*@
-
+			<p id="gfg"></p>*@
+		<p>Food & Beverages</p>
+		<p>cab Facilities</p>
 	</center>
 </body>
 
 </html>
-
