--- a/Views/Shared/_LayoutClient.cshtml
+++ b/Views/Shared/_LayoutClient.cshtml
@@ -41,8 +41,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-dark color-grey" asp-area="" asp-controller="Home"
-                                asp-action="Feature" disabled>Food &
-                                Beverage</a>
+                                asp-action="Feature" disabled>Other Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark color-grey" asp-area="" asp-controller="Home"
