--- a/Views/Booking/AllBookings.cshtml
+++ b/Views/Booking/AllBookings.cshtml
@@ -11,7 +11,7 @@ function changeSelect() {
   
 <table  class="width-99">
     <tr>
-        <td class="text-left grid-header width-180px"><label><img src="~/Images/bookings.png" class="width-25px">&nbsp;Bookings</label></td>
+        <td class="text-left grid-header width-180px padding-left-0px"><label><img src="~/Images/bookings.png" class="width-25px">&nbsp;Bookings</label></td>
         <td class="text-align-left">
             <table>
                 <tr>
