--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -719,3 +719,11 @@ input[type=number]::-webkit-outer-spin-button {
 .padding-15px {
   padding: 15px;
 }
+
+.padding-left-0px {
+  padding-left: 0px !important;
+}
+
+.padding-left-2px-less {
+  padding-left: -2px !important;
+}
